# t_bank_investing

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  utils.py
env/: .env.example
libs/: cls_utils.py  grpc_schemas.py  grpc_schemas_descriptions.py  log_utils.py  report_colorize.py  report_utils.py  utils.py
