[project]
name = "t_bank_investing"
version = "1.0.0"
description = "Python script for analyzing trading operations through the T-Bank Investments service"
authors = [
    {name = "Nizam Keramov", email = "keramov.nizam@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml == 6.1.0",
    "pytz == 2026.1.post1",
    "numpy == 2.4.4",
    "pandas == 3.0.2",
    "urllib3 == 2.6.3",
    "pillow == 12.2.0",
    "openpyxl == 3.1.5",
    "colorama == 0.4.6",
    "aiogram == 3.27.0",
    "protobuf == 4.25.8",
    "requests == 2.33.1",
    "fonttools == 4.62.1",
    "XlsxWriter == 3.2.9",
    "certifi == 2026.2.25",
    "matplotlib == 3.10.8",
    "python-dotenv == 1.2.2",
    "mplfinance == 0.12.10b0",
    "beautifulsoup4 == 4.14.3",
    "opencv-python >= 4.8.1.78",
    "charset-normalizer == 3.4.7",
    "tinkoff-investments @ file:////home/nizam/ide/PycharmProjects/invest-python",
]

keywords = ["python", "trading", "investing", "tinkoff", "analysis"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Nkeramov/t_bank_investing"
"Bug Tracker" = "https://github.com/Nkeramov/t_bank_investing/issues"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy == 1.19.0",
    "ruff == 0.14.8",
    "typing_extensions == 4.15.0",
    "pandas-stubs == 2.3.3.251201",
    "types-pytz == 2025.2.0.20251108",
    "types-requests == 2.32.4.20250913",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "static*",
    "templates*",
    "tests*",
    "docs*",
    "*.egg-info*",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "RUF",      # ruff-specific rules
    "SIM",      # flake8-simplify
    "COM",      # flake8-commas
    "A",        # flake8-builtins
    "PERF",     # flake8-perf-issues
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false