[project]
name = "t_bank_investing"
version = "1.0.0"
description = "Python script for analyzing trading operations through the T-Bank Investments service"
authors = [
    {name = "Nizam Keramov", email = "keramov.nizam@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml == 6.1.1",
    "pytz == 2026.2",
    "numpy == 2.5.0",
    "pandas == 3.0.3",
    "urllib3 == 2.7.0",
    "pillow == 12.2.0",
    "openpyxl == 3.1.5",
    "colorama == 0.4.6",
    "aiogram == 3.29.0",
    "protobuf == 6.31.1",
    "requests == 2.34.2",
    "fonttools == 4.63.0",
    "XlsxWriter == 3.2.9",
    "certifi == 2026.6.17",
    "matplotlib == 3.11.0",
    "python-dotenv == 1.2.2",
    "mplfinance == 0.12.10b0",
    "beautifulsoup4 == 4.15.0",
    "opencv-python >= 4.8.1.78",
    "charset-normalizer == 3.4.7",
    "tenacity == 9.1.4",
    "t-tech-investments == 1.49.2",
]

keywords = ["python", "trading", "investing", "tinkoff", "analysis"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Nkeramov/t_bank_investing"
"Bug Tracker" = "https://github.com/Nkeramov/t_bank_investing/issues"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy == 2.1.0",
    "ruff == 0.15.20",
    "typing_extensions == 4.15.0",
    "pandas-stubs == 3.0.3.260530",
    "types-pytz == 2026.2.0.20260518",
    "types-requests == 2.33.0.20260518",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "static*",
    "templates*",
    "tests*",
    "docs*",
    "*.egg-info*",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "RUF",      # ruff-specific rules
    "SIM",      # flake8-simplify
    "COM",      # flake8-commas
    "A",        # flake8-builtins
    "PERF",     # flake8-perf-issues
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.uv]
extra-index-url = ["https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple"]